myteo/test/analyze/type_check/array/basic.exp
Error: Expected type `Array<Int>` but found `Int`
test/analyze/type_check/array/basic.myte:8:8
 8 |   a1 == 1;
   |         ^

Error: Expected type `Array<Int>` but found `Array<Bool>`
test/analyze/type_check/array/basic.myte:9:8-10
 9 |   a1 == a3;
   |         ^^

Error: Expected type `Int` but found `Array<Int>`
test/analyze/type_check/array/basic.myte:17:3-5
 17 |   (a1: Int);
    |    ^^

Error: Expected type `Array<Bool>` but found `Array<Int>`
test/analyze/type_check/array/basic.myte:18:3-5
 18 |   (a1: Array<Bool>);
    |    ^^